setado os links

--- a/ds1m-b/viniciusNunes/index.html
+++ b/ds1m-b/viniciusNunes/index.html
@@ -51,33 +51,33 @@
       <header>
         <div class="menu">
           <ul>
-            <a href="#">
+            <a href="#home">
               <li>Início</li>
             </a>
-            <a href="#">
+            <a href="#personagens">
               <li>Personagens</li>
             </a>
-            <a href="#">
+            <a href="#trama">
               <li>Trama</li>
             </a>
-            <a href="#">
+            <a href="#creditos">
               <li>Créditos</li>
             </a>
             <img src="./img/navigation__logo.png" alt="logo da netflix" />
           </ul>
         </div>
       </header>
-      <div class="home">
+      <div class="home" id="home">
         <div class="home__logo">
           <img src="./img/tittle__sandman.png" alt="" />
         </div>
         <div class="home__texto"><p>Rei do mundo dos sonhos</p></div>
       </div>
-      <div class="personagens">
+      <div class="personagens" id="personagens">
         <div class="personagens__titulo"><p>Quem está assistindo?</p></div>
         <div class="cards">
           <div class="card-container">
-            <a href="#">
+            <a href="#personagem-morpheu">
               <img
                 class="card_image"
                 src="./img/card__image-dream.png"
@@ -87,7 +87,7 @@
             <span>Dream</span>
           </div>
           <div class="card-container">
-            <a href="#">
+            <a href="#personagem-despair">
               <img
                 class="card_image"
                 src="./img/card__image-despair.png"
@@ -97,7 +97,7 @@
             <span>Despair</span>
           </div>
           <div class="card-container">
-            <a href="#">
+            <a href="#personagem-desire">
               <img
                 class="card_image"
                 src="./img/card__image-desire.png"
@@ -107,7 +107,7 @@
             <span>Desire</span>
           </div>
           <div class="card-container">
-            <a href="#">
+            <a href="#personagem-death">
               <img
                 class="card_image"
                 src="./img/card__image-death.png"
@@ -120,7 +120,7 @@
         <a href="#"><span class="button">Gerenciar Perfis</span></a>
         <!-- teste -->
       </div>
-      <div class="personagens-layout">
+      <div class="personagens-layout" id="personagem-morpheu">
         <div class="layout-header__image">
           <img src="./img/elmo-morpheu.png" alt="elmo morpheu" />
         </div>
@@ -159,7 +159,7 @@
           você desperta.
         </div>
       </div>
-      <div class="personagens-layout">
+      <div class="personagens-layout" id="personagem-despair">
         <div class="layout-header__image">
           <img src="./img/icon-despair.png" alt="ícone da personagem despero" />
         </div>
@@ -199,7 +199,7 @@
           você desperta.
         </div>
       </div>
-      <div class="personagens-layout">
+      <div class="personagens-layout" id="personagem-desire">
         <div class="layout-header__image">
           <img src="./img/icon-desire.png" alt="elmo morpheu" />
         </div>
@@ -238,7 +238,7 @@
           você desperta.
         </div>
       </div>
-      <div class="personagens-layout">
+      <div class="personagens-layout" id="personagem-death">
         <div class="layout-header__image">
           <img src="./img/icon-death.png" alt="ícone da personagem despero" />
         </div>
@@ -278,7 +278,7 @@
           você desperta.
         </div>
       </div>
-      <div class="trama">
+      <div class="trama" id="trama">
         <div class="trama-textos">
           <div class="trama-description">
             <div class="trama-description__container">
@@ -314,14 +314,14 @@
           />
         </div>
       </div>
-      <div class="creditos">
+      <div class="creditos" id="creditos">
         <div class="container-logo">
           <img src="./img/tittle__sandman.png" alt="Logo Sandman" />
         </div>
         <div class="credito-tittle">CRÉDITOS</div>
         <div class="creditos-logos">
           <div class="container-netflix">
-            <a href="#"
+            <a href="https://www.netflix.com/br/title/81150303" target="_blank"
               ><img
                 class="container-netflix"
                 src="./img/container-logo_netflix.png"
@@ -329,7 +329,7 @@
             /></a>
           </div>
           <div class="container-warner">
-            <a href="#">
+            <a href="https://www.warnerbros.com/tv" target="_blank">
               <img
                 class="logo-warner"
                 src="./img/container-warner.png"
@@ -337,7 +337,7 @@
             /></a>
           </div>
           <div class="logo-dc">
-            <a href="#"
+            <a href="https://www.dc.com/" target="_blank"
               ><img
                 class="container-dc"
                 src="./img/container-logo_dc.png"
