--- a/ds1m-b/paula-blesa/index.html
+++ b/ds1m-b/paula-blesa/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="./css/curiosidades.css">
     <link rel="stylesheet" href="./css/gif.css">
     <link rel="stylesheet" href="./css/contato.css">
+    <link rel="stylesheet" href="./css/tablet.css">
+    <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/slider-images.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
@@ -35,7 +37,14 @@
 <body>
 
     <header>
-        <img src="./img/logo.png" alt="pata" class="logo">
+        <div>
+            <img src="./img/logo.png" alt="pata" class="logo">
+        </div>
+        <div class="menuzinho">
+            <a href="menuzinho">    
+                <i class="fa-solid fa-bars"></i>
+            </a>
+        </div>
         <nav>
             <ul class="menu">
                 <li>
@@ -55,7 +64,7 @@
                 </li>
             </ul>
         </nav>
-
+      
     </header>
     <main>
         <a href="#" class="voltar">
@@ -103,24 +112,27 @@
 
                     </div>
                 </div>
-                <div class="slideshow-container">
+               <div class="slideshow-container">
                     <div class="mySlides-images fade">
-                        <img src="./img/siames.png" alt="Image Cat 6" />
+                        <img src="./img/cat-1.png" alt="Image Cat 6" />
                     </div>
                     <div class="mySlides-images fade">
-                        <img src="./img/semRaça.png" alt="Image Cat 6" />
+                        <img src="./img/imgCat-8.png" alt="Image Cat 6" />
                     </div>
                     <div class="mySlides-images fade">
-                        <img src="./img/persa.png" alt="Image Cat 6" />
+                        <img src="./img/imgCat-3.png" alt="Image Cat 6" />
                     </div>
                     <div class="mySlides-images fade">
-                        <img src="./img/spinks 1.png" alt="Image Cat 6" />
+                        <img src="./img/imgCat-4.png" alt="Image Cat 6" />
                     </div>
                     <div class="mySlides-images fade">
-                        <img src="./img/angora.png" alt="Image Cat 6" />
+                        <img src="./img/imgCat-5.png" alt="Image Cat 6" />
                     </div>
                     <div class="mySlides-images fade">
-                        <img src="./img/persa.png" alt="Image  6" />
+                        <img src="./img/imgCat-6.png" alt="Image  6" />
+                    </div>
+                    <div class="mySlides-images fade">
+                        <img src="./img/imgat-7.png" alt="Image  6" />
                     </div>
                 </div>
                 <div class="dots-images">
@@ -130,7 +142,8 @@
                     <span class="dot-images"></span>
                     <span class="dot-images"></span>
                     <span class="dot-images"></span>
-                </div>
+                    <span class="dot-images"></span>
+                </div> 
         </section>
         <section class="raças" id="raças">
             <div class="raças-icon">
@@ -188,7 +201,7 @@
 
             <ul class="outros">
                 <li>
-                    <a href="https://www.peritoanimal.com.br/racas-de-gatos.html">Outros</a>
+                    <a href="https://www.peritoanimal.com.br/racas-de-gatos.html" target="_blank">Outros</a>
                 </li>
             </ul>
         </section>
