reservas e localização finalizados

--- a/ds1t-b/claudioSousa/index.html
+++ b/ds1t-b/claudioSousa/index.html
@@ -47,7 +47,7 @@
 
         <section class="cardapio">
 
-            <h2 class="title">Cardápio</h2>
+            <h2 class="title ml">Cardápio</h2>
 
             <div class="card-text">
                 <h3 class="title-2">Porções:</h3>
@@ -89,11 +89,33 @@
         <section class="reservasELocalizacao">
 
             <div class="reservas">
+                <h2 class="title">Reservas</h2>
+                <div class="reservas-bg">
+                    <p>Realize sua reserva conosco,</p>
+                    <p>e venha aproveitar esse ambiente incrível</p>
+                    <p>junto com sua familia e amigos!!!</p>
+
+                    <a href="#" class="bt-reservas"> Reservar</a>
+                    
+                    
+                </div>
 
 
             </div>
 
             <div class="localizacao">
+                <h2 class="title">Localização</h2>
+                <div class="localizacao-bg">
+                    <div class="localizacao-esc">
+                        <p>Calçada Flôr de Lótus, 78 - Alphaville Comercial</p>
+                        <p>Barueri - SP</p>
+                        <p>06453-016</p>
+
+                    </div>
+                    <img src="./IMG/gps.png" alt="Foto do google maps">
+                </div>
+
+
 
             </div>
 
