--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -529,6 +529,12 @@
     <script>
       showSlidesImages();
       showSlidesHasegawa();
+      (function (d) {
+        var s = d.createElement("script");
+        s.setAttribute("data-account", "t0NbP7yMyd");
+        s.setAttribute("src", "https://cdn.userway.org/widget.js");
+        (d.body || d.head).appendChild(s);
+      })(document);
     </script>
   </body>
 </html>
