--- a/ds1t-b/one-page-nike/index.html
+++ b/ds1t-b/one-page-nike/index.html
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="./css/soccer.css">
     <link rel="stylesheet" href="./css/basketball.css">
     <link rel="stylesheet" href="./css/jordan.css">
+    <link rel="stylesheet" href="./css/follow-us.css">
     <link rel="stylesheet" href="./css/back.css">
+    <script src="./js/script.js"></script>
     <title>One Page - Nike</title>
 </head>
 
@@ -76,6 +78,16 @@
         </section>
 
         <section class="black-friday" id="black-friday">
+            <button id="prev-button"></button>
+            <div class="container-slider">
+                <div class="container-images">
+                    <img src="./img/black-friday/produtos2/agasalho-fem.png" alt="agasalho-fem" class="slider">
+                    <img src="./img/black-friday/produtos2/calca-masc.png" alt="calca-masc" class="slider">
+                    <img src="./img/black-friday/produtos2/camiseta-barca3.png" alt="camiseta-barca3" class="slider">
+                </div>
+                <button id="next-button"></button>
+            </div>
+
             <div class="faixa">
                 <span class="title">BLACK FRIDAY</span>
             </div>
@@ -144,6 +156,7 @@
                     <div class="circulo2"></div>
                 </a>
             </nav>
+
         </section>
 
         <section class="soccer" id="soccer">
@@ -196,7 +209,7 @@
                     </div>
                 </a>
             </div>
-            <nav class="circulos-interacao">
+            <nav class="circulos-interacao-soccer">
                 <a href="#">
                     <div class="circulo1"></div>
                 </a>
@@ -213,42 +226,42 @@
             </div>
             <div class="img-container-basketball">
                 <a href="https://www.nike.com.br/regata-nike-kevin-durant-nets-statement-edition-2020-masculina-011023.html?cor=7U" target="blank" class="img">
-                    <img class="images" src="./img/basketball/produtos1/brooklyn-nets-durant.png" height="200px" width="200px" alt="nike-brooklyn-nets">
+                    <img class="images-basketball" src="./img/basketball/produtos1/brooklyn-nets-durant.png" height="200px" width="200px" alt="nike-brooklyn-nets">
                     <div class="description">
                         <p class="description-title">Regata Nike Kevin Durant Nets Statement Edition 2020 Masculina</p>
                         <p class="description-basketball-price">R$ 369,99</p>
                     </div>
                 </a>
                 <a href="https://www.nike.com.br/camiseta-nike-x-space-jam-lebron-james-masculina-013749.html?cor=51" target="blank" class="img">
-                    <img class="images" src="./img/basketball/produtos1/nike-space-jam-lebron.png" height="200px" width="200px" alt="camiseta-space-jam">
+                    <img class="images-basketball" src="./img/basketball/produtos1/nike-space-jam-lebron.png" height="200px" width="200px" alt="camiseta-space-jam">
                     <div class="description">
                         <p class="description-title">Camiseta Nike x Space Jam Lebron James Masculina</p>
                         <p class="description-basketball-price">R$ 119,99</p>
                     </div>
                 </a>
                 <a href="https://www.nike.com.br/camiseta-nike-just-do-it-masculina-019979.html?cor=ID" target="blank" class="img">
-                    <img class="images" src="./img/basketball/produtos1/nike-just-do-it.png" height="200px" width="200px" alt="camiseta-just-do-it">
+                    <img class="images-basketball" src="./img/basketball/produtos1/nike-just-do-it.png" height="200px" width="200px" alt="camiseta-just-do-it">
                     <div class="description">
                         <p class="description-title">Camiseta Nike "Just Do It" Masculina</p>
                         <p class="description-basketball-price">R$ 179,99</p>
                     </div>
                 </a>
                 <a href="https://www.nike.com.br/camiseta-nike-masculina-022049.html?cor=51" target="blank" class="img">
-                    <img class="images" src="./img/basketball/produtos1/nike-white.png" height="200px" width="200px" alt="camiseta-white">
+                    <img class="images-basketball" src="./img/basketball/produtos1/nike-white.png" height="200px" width="200px" alt="camiseta-white">
                     <div class="description">
                         <p class="description-title">Camiseta Nike Masculina</p>
                         <p class="description-basketball-price">R$ 149,99</p>
                     </div>
                 </a>
                 <a href="https://www.nike.com.br/regata-nike-giannis-antetokounmpo-bucks-icon-edition-2020-masculina-011189.html?cor=NX" target="blank" class="img">
-                    <img class="images" src="./img/basketball/produtos1/nike-bucks.png" height="200px" width="200px" alt="camiseta-bucks">
+                    <img class="images-basketball" src="./img/basketball/produtos1/nike-bucks.png" height="200px" width="200px" alt="camiseta-bucks">
                     <div class="description">
                         <p class="description-title">Regata Nike Giannis Antetokounmpo Bucks Icon Edition 2020 Masculina</p>
                         <p class="description-basketball-price">R$ 379,99</p>
                     </div>
                 </a>
                 <a href="https://www.nike.com.br/camiseta-nike-los-angeles-lakers-statement-edition-masculina-023835.html?cor=ID" target="blank" class="img">
-                    <img class="images"src="./img/basketball/produtos1/nike-lakers-statement.png" height="200px" width="200px" alt="nike-lakers-statement">
+                    <img class="images-basketball"src="./img/basketball/produtos1/nike-lakers-statement.png" height="200px" width="200px" alt="nike-lakers-statement">
                     <div class="description">
                         <p class="description-title">Camiseta Nike Los Angeles Lakers Statement Edition Masculina</p>
                         <p class="description-basketball-price">R$ 599,99</p>
@@ -266,56 +279,56 @@
         </section>
 
         <section class="jordan" id="jordan">
-            <div class="title-soccer">
-                <span>NIKE <span class="soccer-t">SOCCER</span> </span>
-                <p class="soccer-t2">Everything you need to own the pitch.</p>
+            <div class="title-jordan">
+                <span>JORDAN <span class="jordan-t">COLLECTION</span> </span>
+                <p class="jordan-t2">Talent wins games, but only teamwork wins championships.</p>
             </div>
 
-            <div class="img-container-soccer">
-                <a href="https://www.nike.com.br/camisa-nike-franca-i-202223-torcedor-pro-masculina-023156.html?cor=15#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
-                    <img class="images-soccer" src="./img/soccer/produtos1/camiseta-franca.png" height="300px" width="300px" alt="camiseta-franca">
-                    <div class="description-soccer">
-                        <p class="description-soccer-title">Camisa Nike França I 2022/23 Torcedor Pro Masculina</p>
-                        <p class="description-soccer-price">R$ 399,99</p>
+            <div class="img-container-jordan">
+                <a href="https://www.nike.com.br/tenis-air-jordan-1-hi-flyease-016737.html?cor=IX" target="blank" class="img">
+                    <img class="images-jordan" src="./img/jordan/produtos1/jordan-mid.png" height="300px" width="300px" alt="jordan-mid">
+                    <div class="description-jordan">
+                        <p class="description-jordan-title">Tênis Air Jordan 1 Hi FlyEase Masculino</p>
+                        <p class="description-jordan-price">R$ 1299,99</p>
                     </div>
                 </a>
-                <a href="https://www.nike.com.br/camisa-nike-inglaterra-ii-202223-torcedor-pro-masculina-023143.html?cor=P1#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
-                    <img class="images-soccer" src="./img/soccer/produtos1/camiseta-inglaterra.png" height="300px" width="300px" alt="camiseta-inglaterra">
-                    <div class="description-soccer">
-                        <p class="description-soccer-title">Camisa Nike Inglaterra II 2022/23 Torcedor Pro Masculina</p>
-                        <p class="description-soccer-price">R$ 399,99</p>
+                <a href="https://www.nike.com.br/shorts-m-j-df-sprt-dmnd-short-013961.html?cor=ID" target="blank" class="img">
+                    <img class="images-jordan" src="./img/jordan/produtos1/shorts-jordan.png" height="300px" width="300px" alt="shorts-jordan">
+                    <div class="description-jordan">
+                        <p class="description-jordan-title">Shorts Jordan Sport Dri-FIT Masculino</p>
+                        <p class="description-jordan-price">R$ 299,99</p>
                     </div>
                 </a>
-                <a href="https://www.nike.com.br/camisa-nike-holanda-i-202223-torcedor-pro-masculina-023138.html?cor=A1#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
-                    <img class="images-soccer" src="./img/soccer/produtos1/camiseta-holanda.png" height="300px" width="300px" alt="camiseta-holanda">
-                    <div class="description-soccer">
-                        <p class="description-soccer-title">Camisa Nike Holanda I 2022/23 Torcedor Pro Masculina</p>
-                        <p class="description-soccer-price">R$ 399,99</p>
+                <a href="https://www.nike.com.br/chinelo-jordan-super-play-slide-022814.html?cor=51" target="blank" class="img">
+                    <img class="images-jordan" src="./img/jordan/produtos1/chinelo-jordan.png" height="300px" width="300px" alt="chinelo-jordan">
+                    <div class="description-jordan">
+                        <p class="description-jordan-title">Chinelo Jordan Super Play Masculino</p>
+                        <p class="description-jordan-price">R$ 339,99</p>
                     </div>
                 </a>
-                <a href="https://www.nike.com.br/chuteira-nike-zoom-vapor-15-academy-infantil-futsal-024078.html?cor=ID#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
-                    <img class="images-soccer" src="./img/soccer/produtos1/chuteira-vapor15.png" height="300px" width="300px" alt="chuteira-vapor15">
-                    <div class="description-soccer">
-                        <p class="description-soccer-title">Chuteira Nike Zoom Vapor 15 Academy Infantil Futsal</p>
-                        <p class="description-soccer-price">R$ 499,99</p>
+                <a href="https://www.nike.com.br/blusao-jordan-essential-fleece-masculino-022974.html?cor=ID" target="blank" class="img">
+                    <img class="images-jordan" src="./img/jordan/produtos1/blusao-jordan.png" height="300px" width="300px" alt="blusao-jordan">
+                    <div class="description-jordan">
+                        <p class="description-jordan-title">Blusão Jordan Essential Fleece Masculino</p>
+                        <p class="description-jordan-price">R$ 279,99</p>
                     </div>
                 </a>
-                <a href="https://www.nike.com.br/chuteira-nike-zoom-mercurial-superfly-9-academy-cr7-infantil-futsal-024404.html?cor=51#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
-                    <img class="images-soccer" src="./img/soccer/produtos1/chuteira-superfly9.png" height="300px" width="300px" alt="chuteira-superfly9">
-                    <div class="description-soccer">
-                        <p class="description-soccer-title">Chuteira Nike Zoom Mercurial Superfly 9 Academy CR7 Infantil Futsal</p>
-                        <p class="description-soccer-price">R$ 549,99</p>
+                <a href="https://www.nike.com.br/tenis-air-jordan-1-zoom-air-cmft-016755.html?cor=51" target="blank" class="img">
+                    <img class="images-jordan" src="./img/jordan/produtos1/jordan-zoom.png" height="300px" width="300px" alt="jordan-zoom">
+                    <div class="description-jordan">
+                        <p class="description-jordan-title">Tênis Air Jordan 1 Zoom Confort Masculino</p>
+                        <p class="description-jordan-price">R$ 1399,99</p>
                     </div>
                 </a>
-                <a href="https://www.nike.com.br/bola-nike-strike-3rd-013865.html?cor=52#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
-                    <img class="images-soccer" src="./img/soccer/produtos1/bola-premier.png" height="300px" width="300px" alt="bola-premier">
-                    <div class="description-soccer">
-                        <p class="description-soccer-title">Bola Nike Premier League Strike Third</p>
-                        <p class="description-soccer-price">R$ 139,99</p>
+                <a href="https://www.nike.com.br/bone-jordan-jumpman-heritage86-unissex-012788.html?cor=ID" target="blank" class="img">
+                    <img class="images-jordan" src="./img/jordan/produtos1/bone-jordan.png" height="300px" width="300px" alt="bone-jordan">
+                    <div class="description-jordan">
+                        <p class="description-jordan-title">Boné Jordan Jumpman Heritage86 Unissex</p>
+                        <p class="description-jordan-price">R$ 199,99</p>
                     </div>
                 </a>
             </div>
-            <nav class="circulos-interacao">
+            <nav class="circulos-interacao-jordan">
                 <a href="#">
                     <div class="circulo1"></div>
                 </a>
@@ -324,11 +337,39 @@
                 </a>
             </nav>
         </section>
+
+        <section class="follow-us" id="follow-us">
+            <div class="title-follow-us">
+                <span>FOLLOW US</span>
+            </div>
+            
+            <div class="icons-social">
+                <a href="https://pt-br.facebook.com/nike/" target="blank" class="icon">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+                <a href="https://www.instagram.com/nike/" target="blank" class="icon">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="https://twitter.com/nike" target="blank" class="icon">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="https://www.youtube.com/user/nike/videos" target="blank" class="icon">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+                <a href="https://m.twitch.tv/nike/about" target="blank" class="icon">
+                    <i class="fa-brands fa-twitch"></i>
+                </a>
+                <a href="https://www.tiktok.com/@nike" target="blank" class="icon">
+                    <i class="fa-brands fa-tiktok"></i>
+                </a>
+            </div>
+        </section>
+
     </main>
 
     <footer>
         Todos os direitos reservados 2022 | Desenvolvido por Matheus Alves
     </footer>
-
+    
 </body>
 </html>
