--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -6,9 +6,30 @@
     <title>Classical Music App</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="home"></section>
+    <section class="home">
+        <div class="home__content">
+            <header>
+                <a href="#HOME" >
+                    <h2 id="HOME">HOME</h2> 
+                </a>
+                <a href="#MUSICIANS">
+                    <h2>MUSICIANS</h2> 
+                </a>
+                <a href="">
+                    <h2>INSTRUMENTS</h2> 
+                </a>
+                <a href="">
+                    <h2>ABOUT</h2>
+                </a>
+            </header>
+        </div>
+    </section>
     <section class="composers"> </section>
     <section class="instruments"></section>
     <section class="about"> </section>
