sessão museu iniciada

--- a/ds1m-b/one-page-leticia/index.html
+++ b/ds1m-b/one-page-leticia/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./css/section-title">
     <link rel="stylesheet" href="./css/fundadores.css">
     <link rel="stylesheet" href="./css/filmes.css">
+    <link rel="stylesheet" href="./css/museu.css">
+    <link rel="stylesheet" href="./css/slider.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;800;900&display=swap" rel="stylesheet"> 
@@ -131,6 +133,48 @@
             <img src="./img/ponyo.png" alt="">
         </a>
         </div> 
+    </section>
+
+    <section class="museu" id="museu">
+        <h2 class="section-title">Museu</h2>
+        <div class="description">
+            <h3 class="description__title">Sobre:</h3>
+            <p class="description__text">
+                O <a href="https://studioghibli.com.br/museu-ghibli/" target="_blank">Museu Ghibli</a> é um espaço de arte totalmente dedicado às obras do Studio Ghibli. 
+                Seu planejamento começou em 1998. Já a construção começou em Março de 2000, e foi aberto 
+                oficialmente 01 de Outubro de 2001. Em si é uma obra caprichosamente desenhada que remete 
+                aos diferentes filmes, e muitos de seus famosos personagens estão lá!
+            </p>
+        </div>
+        
+        <div class="slider">
+            <ul class="slider-list">
+
+                <li class="slide">
+                    <input type="radio" class="slide-controller" name="totoro" id="imagem1" checked>
+                    <label for="imagem1"></label>
+                    <img src="./img/totoro.png" alt="">
+                </li>
+                <li class="slide">
+                    <input type="radio" class="slide-controller" name="entrada" id="imagem2">
+                    <label for="imagem2"></label>
+                    <img src="./img/entrada-museu.jpeg" alt="">
+                </li>
+                <li class="slide">
+                    <input type="radio" class="slide-controller" name="gato" id="imagem3">
+                    <label for="imagem3"></label>
+                    <img src="./img/gato-museu.jpeg" alt="">
+                </li>
+              <li class="slide">
+                <input type="radio" class="slide-controller" name="robô" id="imagem4">
+                <label for="imagem4"></label>
+                <img src="./img/robo.jfif" alt="">
+              </li>
+            </ul>
+        </div>
+        
+
+
     </section>
 </main>
 
