home ta faltando algumas coisinhas

--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/seta.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/patenteImg.css">
     <title>Call of Duty: Black Ops</title>
 </head>
 <body>
@@ -43,12 +44,11 @@
         </div>
     </header>
     <main>
-        <section class="home" id="home">
+        <section class="home" id="home"> 
             <div>
-                <img src="./img/gifHome.gif" alt="gifHome" class="gifHome">
-            </div>
-            <div>
-                <img src="./img/Rectangle 1.png" alt="patenteimg" class="patenteimg">
+                <h1 class="patente">
+                    &#187; 
+                </h1>
             </div>
         </section>
         <section class="bo1" id="bo1" ></section>
