--- a/ds1m-b/paula-blesa/index.html
+++ b/ds1m-b/paula-blesa/index.html
@@ -19,12 +19,15 @@
     <link rel="stylesheet" href="./css/tablet.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/slider-images.css">
+    <link rel="stylesheet" href="./css/responsive.css">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
 
@@ -41,7 +44,7 @@
             <img src="./img/logo.png" alt="pata" class="logo">
         </div>
         <div class="menuzinho">
-            <a href="menuzinho">    
+            <a href="menuzinho">
                 <i class="fa-solid fa-bars"></i>
             </a>
         </div>
@@ -64,7 +67,7 @@
                 </li>
             </ul>
         </nav>
-      
+
     </header>
     <main>
         <a href="#" class="voltar">
@@ -112,7 +115,7 @@
 
                     </div>
                 </div>
-               <div class="slideshow-container">
+                <div class="slideshow-container">
                     <div class="mySlides-images fade">
                         <img src="./img/cat-1.png" alt="Image Cat 6" />
                     </div>
@@ -143,7 +146,7 @@
                     <span class="dot-images"></span>
                     <span class="dot-images"></span>
                     <span class="dot-images"></span>
-                </div> 
+                </div>
         </section>
         <section class="raças" id="raças">
             <div class="raças-icon">
