falta terminar o menu

--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/seta.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/patenteImg.css">
+    <link rel="stylesheet" href="./css/bo1.css">
     <title>Call of Duty: Black Ops</title>
 </head>
 <body>
@@ -44,14 +45,22 @@
         </div>
     </header>
     <main>
-        <section class="home" id="home"> 
+        <section class="home" id="home">
+            <h1 class="patente">
+                &#187; 
+            </h1>
+            <h1 class="textHome">
+                    Call of Duty é uma franquia de FPS lançada em 2003. O jogo de tiro é um dos mais antigos e populares da indústria. Abordou, 
+                    inicialmente, a Segunda Guerra Mundial, mas, depois, expandiu horizontes para outras temáticas como Guerra Fria, conflitos
+                     futuristas e até mesmo espaciais.
+            </h1>
+            <div id="linha-horizontal"></div>
+        </section>
+        <section class="bo1" id="bo1">
             <div>
-                <h1 class="patente">
-                    &#187; 
-                </h1>
+                <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logoBo1">
             </div>
         </section>
-        <section class="bo1" id="bo1" ></section>
         <section class="bo2" id="bo2"></section>
         <section class="bo3" id="bo3"></section>
     </main>
