slider de museu finalizado

--- a/ds1m-b/one-page-leticia/index.html
+++ b/ds1m-b/one-page-leticia/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/section-title">
     <link rel="stylesheet" href="./css/fundadores.css">
     <link rel="stylesheet" href="./css/filmes.css">
-    <link rel="stylesheet" href="./css/museu.css">
+    <link rel="stylesheet" href="./css/museu.css"> 
     <link rel="stylesheet" href="./css/slider.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -145,36 +145,31 @@
                 oficialmente 01 de Outubro de 2001. Em si é uma obra caprichosamente desenhada que remete 
                 aos diferentes filmes, e muitos de seus famosos personagens estão lá!
             </p>
-        </div>
-        
         <div class="slider">
-            <ul class="slider-list">
-
-                <li class="slide">
-                    <input type="radio" class="slide-controller" name="totoro" id="imagem1" checked>
-                    <label for="imagem1"></label>
+            <h3 class="slider__title">Imagens:</h3>
+            <ul class="slider-lista">
+                <li>
+                    <input type="radio" id="slide1" name="slide" checked>
+                    <label for="slide1"></label>
                     <img src="./img/totoro.png" alt="">
                 </li>
-                <li class="slide">
-                    <input type="radio" class="slide-controller" name="entrada" id="imagem2">
-                    <label for="imagem2"></label>
+                <li>
+                    <input type="radio" id="slide2" name="slide">
+                    <label for="slide2"></label>
                     <img src="./img/entrada-museu.jpeg" alt="">
                 </li>
-                <li class="slide">
-                    <input type="radio" class="slide-controller" name="gato" id="imagem3">
-                    <label for="imagem3"></label>
+                <li>
+                    <input type="radio" id="slide3" name="slide">
+                    <label for="slide3"></label>
                     <img src="./img/gato-museu.jpeg" alt="">
                 </li>
-              <li class="slide">
-                <input type="radio" class="slide-controller" name="robô" id="imagem4">
-                <label for="imagem4"></label>
-                <img src="./img/robo.jfif" alt="">
-              </li>
+                <li>
+                    <input type="radio" id="slide4" name="slide">
+                    <label for="slide3"></label>
+                    <img src="./img/robo.jfif" alt="">
+                </li>
             </ul>
-        </div>
-        
-
-
+        </div> 
     </section>
 </main>
 
