Finished nav circles

--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=[device-width], initial-scale=1.0">
@@ -8,30 +9,51 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/presentation.css">
 </head>
+
 <body>
+    <header>
+        <a href="#HOME">
+            <h2 id="HOME">HOME</h2>
+        </a>
+        <a href="#MUSICIANS">
+            <h2>MUSICIANS</h2>
+        </a>
+        <a href="">
+            <h2>INSTRUMENTS</h2>
+        </a>
+        <a href="">
+            <h2>ABOUT</h2>
+        </a>
+    </header>
     <section class="home">
-        <div class="home__content">
-            <header>
-                <a href="#HOME" >
-                    <h2 id="HOME">HOME</h2> 
-                </a>
-                <a href="#MUSICIANS">
-                    <h2>MUSICIANS</h2> 
-                </a>
-                <a href="">
-                    <h2>INSTRUMENTS</h2> 
-                </a>
-                <a href="">
-                    <h2>ABOUT</h2>
-                </a>
-            </header>
+        <div class="presentation">
+            <h1>MUSIC FOR YOU</h1>
+            <p>Meet the grand composers of classical musician and apreciate your instruments</p>
+            <button>Open App</button>
         </div>
+        <img src="./img/cello-home.png" class="cello">
+        <nav>
+            <a href="">
+                <img src="./img/circle-1.png" alt="">
+            </a>
+            <a href="">
+                <img src="./img/circle-2.png" alt="">
+            </a>
+            <a href="">
+                <img src="./img/circle-3.png" alt="">
+            </a>
+        </nav>
     </section>
     <section class="composers"> </section>
     <section class="instruments"></section>
     <section class="about"> </section>
 </body>
+
 </html>
