--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -18,28 +18,31 @@
 </head>
 
 <body>
-    <header>
-        <a href="#HOME">
-            <h2 id="HOME">HOME</h2>
-        </a>
-        <a href="#MUSICIANS">
-            <h2>MUSICIANS</h2>
-        </a>
-        <a href="">
-            <h2>INSTRUMENTS</h2>
-        </a>
-        <a href="">
-            <h2>ABOUT</h2>
-        </a>
-    </header>
+    
     <section class="home">
-        <div class="presentation">
-            <h1>MUSIC FOR YOU</h1>
-            <p>Meet the grand composers of classical musician and apreciate your instruments</p>
-            <button>Open App</button>
+        <header>
+            <a href="#HOME">
+                <h2 id="HOME">HOME</h2>
+            </a>
+            <a href="#MUSICIANS">
+                <h2>MUSICIANS</h2>
+            </a>
+            <a href="">
+                <h2>INSTRUMENTS</h2>
+            </a>
+            <a href="">
+                <h2>ABOUT</h2>
+            </a>
+        </header>
+        <div class="home__content">
+            <div class="presentation">
+                <h1>MUSIC FOR YOU</h1>
+                <p>Meet the grand composers of classical musician and apreciate your instruments</p>
+                <button>Open App</button>
+            </div>
+            <img src="./img/cello-home.png" class="cello">
         </div>
-        <img src="./img/cello-home.png" class="cello">
-        <nav>
+        <nav class="home__index">
             <a href="">
                 <img src="./img/circle-1.png" alt="">
             </a>
