sessão museu concluída

--- a/ds1m-b/one-page-leticia/index.html
+++ b/ds1m-b/one-page-leticia/index.html
@@ -76,9 +76,9 @@
     </section>
 
     <section class="fundadores" id = "fundadores">
-         <div class="logo">
+         <!-- <div class="logo">
             <img src="./img/logo_studio.png" alt="">
-        </div> 
+        </div>  -->
         <h2 class="section-title">Fundadores</h2>
 
         <section class="nome-fundadores">
@@ -136,15 +136,19 @@
     </section>
 
     <section class="museu" id="museu">
+        <div class="logo">
+            <img src="./img/logo_studio.png" alt="">
+        </div> 
         <h2 class="section-title">Museu</h2>
-        <div class="description">
-            <h3 class="description__title">Sobre:</h3>
+        <div class="text">
+            <h3 class="text__title">Sobre:</h3>
             <p class="description__text">
                 O <a href="https://studioghibli.com.br/museu-ghibli/" target="_blank">Museu Ghibli</a> é um espaço de arte totalmente dedicado às obras do Studio Ghibli. 
                 Seu planejamento começou em 1998. Já a construção começou em Março de 2000, e foi aberto 
                 oficialmente 01 de Outubro de 2001. Em si é uma obra caprichosamente desenhada que remete 
                 aos diferentes filmes, e muitos de seus famosos personagens estão lá!
             </p>
+        </div> 
         <div class="slider">
             <h3 class="slider__title">Imagens:</h3>
             <ul class="slider-lista">
@@ -156,7 +160,7 @@
                 <li>
                     <input type="radio" id="slide2" name="slide">
                     <label for="slide2"></label>
-                    <img src="./img/entrada-museu.jpeg" alt="">
+                    <img src="./img/brinquedos.jpg" alt="">
                 </li>
                 <li>
                     <input type="radio" id="slide3" name="slide">
@@ -165,12 +169,19 @@
                 </li>
                 <li>
                     <input type="radio" id="slide4" name="slide">
-                    <label for="slide3"></label>
+                    <label for="slide4"></label>
                     <img src="./img/robo.jfif" alt="">
+                </li>
+                <li>
+                    <input type="radio" id="slide5" name="slide">
+                    <label for="slide5"></label>
+                    <img src="./img/entrada-museu.jpeg" alt="">
                 </li>
             </ul>
         </div> 
     </section>
+
+
 </main>
 
 </body>
