--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -14,12 +14,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/presentation.css">
+    <link rel="stylesheet" href="./css/composers.css">
 </head>
 
 <body>
     
-    <section class="home">
+    <section class="home" id="home">
         <header>
             <a href="#HOME">
                 <h2 id="HOME">HOME</h2>
@@ -42,7 +44,7 @@
             </div>
             <img src="./img/cello-home.png" class="cello">
         </div>
-        <nav class="home__index">
+        <nav class="index">
             <a href="">
                 <img src="./img/circle-1.png" alt="">
             </a>
@@ -54,7 +56,31 @@
             </a>
         </nav>
     </section>
-    <section class="composers"> </section>
+    <section class="composers">
+        <ul>
+            <li id="chopin">
+                <img src="./img/chopin 1.png" alt="Desenho do Chopin">
+                <h2>CHOPIN</h2>
+                <p>Um pianista polonês radicado na França e compositor para piano da era romântica. É amplamente conhecido como um dos maiores compositores para piano e um dos pianistas mais importantes da história.
+                </p>
+            </li>
+            <li id="bethoven">
+                <img src="./img/bethoven 1.png" alt="Desenho do Bethoven">
+                <h2>BETHOVEN</h2>
+                <p>Considerado um dos pilares da música ocidental, Bethoven é conhecido pelo incontestável desenvolvimento, tanto da linguagem como do conteúdo musical demonstrado nas suas obras, permanecendo como um dos compositores mais respeitados e mais influentes de todos os tempos.
+                </p>
+            </li>
+            <li id="mozart">
+                <img src="./img/mozart 1.png" alt="Desenho do Mozart">
+                <h2>MOZART</h2>
+                <p>Autor de mais de 600 obras, Wolfgang Amadeus Mozart foi um compositor compentente desde os cinco anos de idade. Possuiu habilidades no teclado e violino. Uma de suas maiores composições é a Sinfonia n°40.  
+                </p>
+            </li>
+        </ul>
+        <a href="#home">
+            <img src="./img/circle-1.png" alt="" class="index">
+        </a>
+    </section>
     <section class="instruments"></section>
     <section class="about"> </section>
 </body>
